--- a/.github/workflows/pull-request-deploy-and-audit.yml
+++ b/.github/workflows/pull-request-deploy-and-audit.yml
@@ -1,5 +1,5 @@
 name: Pull Request Deploy and Audit
-on: [pull_request]
+on: [pull_request_target]
 jobs:
     deploy_and_audit:
         runs-on: ubuntu-latest
