--- a/.github/workflows/pull-request-deploy-and-audit.yml
+++ b/.github/workflows/pull-request-deploy-and-audit.yml
@@ -1,7 +1,12 @@
 name: Pull Request Deploy and Audit
-on: [pull_request_target]
+on:
+    pull_request_target:
+      types:
+        - opened
+        - synchronize
+        - reopened
 permissions:
-  pull-requests: write
+    pull-requests: write
 jobs:
     deploy_and_audit:
         runs-on: ubuntu-latest
