--- a/.github/workflows/pull-request-deploy-and-audit.yml
+++ b/.github/workflows/pull-request-deploy-and-audit.yml
@@ -1,10 +1,5 @@
 name: Pull Request Deploy and Audit
-on:
-    pull_request_target:
-      types:
-        - opened
-        - synchronize
-        - reopened
+on: [pull_request_target]
 permissions:
     pull-requests: write
 jobs:
