--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
 	"compilerOptions": {
 		"baseUrl": "./",
 		"outDir": "./dist/out-tsc",
-		"forceConsistentCasingInFileNames": true,
+    	"forceConsistentCasingInFileNames": true,
+    	"esModuleInterop": true,
 		"strict": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"sourceMap": true,
-		"declaration": false,
-		"downlevelIteration": true,
+    	"declaration": false,
 		"experimentalDecorators": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
