--- a/angular.json
+++ b/angular.json
@@ -15,15 +15,12 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:application",
+					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": {
-              "base": "build"
-            },
-            "index": "src/index.html",
-						"polyfills": [
-              "src/polyfills.ts"
-            ],
+						"outputPath": "build",
+						"index": "src/index.html",
+						"main": "src/main.ts",
+						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
 							"src/favicon.ico",
@@ -54,8 +51,8 @@
 							"src/assets/js/particles.min.js",
 							"src/assets/js/vanilla-tilt.min.js"
 						],
-            "serviceWorker": "ngsw-config.json",
-            "browser": "src/main.ts"
+						"serviceWorker": true,
+						"ngswConfigPath": "ngsw-config.json"
 					},
 					"configurations": {
 						"production": {
@@ -79,8 +76,8 @@
 							],
 							"outputHashing": "all"
 						},
-            "development": {
-              "optimization": false,
+						"development": {
+							"optimization": false,
 							"extractLicenses": false,
 							"sourceMap": true,
 							"namedChunks": true
@@ -91,19 +88,19 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-            "production": {
-              "buildTarget": "JayantGoel001:build:production"
+						"production": {
+							"buildTarget": "JayantGoel001:build:production"
 						},
-            "development": {
-              "buildTarget": "JayantGoel001:build:development"
+						"development": {
+							"buildTarget": "JayantGoel001:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "JayantGoel001:build"
+					"options": {
+						"buildTarget": "JayantGoel001:build"
 					}
 				},
 				"test": {
@@ -126,7 +123,10 @@
 				},
 				"deploy": {
 					"builder": "angular-cli-ghpages:deploy",
-					"options": {}
+					"options": {
+						"branch": "gh-pages",
+						"directory": "build"
+					}
 				}
 			}
 		}
