--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/compiler-cli": "^19.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^1.0.0-rc.2",
+    "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
